--- a/index.html
+++ b/index.html
@@ -11,23 +11,30 @@
   <header>
        <nav>
     <ul>
-      <li><a href="#top" >Top</a></li>
-      <li><a href="#national">National</a></li>
-      <li><a href="#regional">Regional</a></li>
-      <li><a href="#state">State-Level</a></li>
+      <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
+      <li><a href="#national" onmouseover="soundclick.play();">National</a></li>
+      <li><a href="#regional" onmouseover="soundclick.play();">Regional</a></li>
+      <li><a href="#state" onmouseover="test.play();">State-Level</a></li>
+	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
     <ul>
         </nav>
     </header>
 <body>
-    <h1 class="title">Educational Attainment in the United States</h1>
+	
+
+    <h1 onmouseover="responsiveVoice.speak('Educational Attainment in the United States');" onmouseleave="responsiveVoice.cancel();" class="title" >Educational Attainment in the United States</h1>
         
 	
 	<p><br></p>
-    <h2 class="subtitle">Nation-Wide Education Level of Population in Schooling</h2>
-	
+    <h2 onmouseover="responsiveVoice.speak('Nation-Wide Education Level of Population in Schooling');" onmouseleave="responsiveVoice.cancel();" class="subtitle">Nation-Wide Education Level of Population in Schooling</h2>
+<script>	
+var soundclick = new Audio();
+soundclick.src = "sound.wav";
+</script>  
+
     <svg id="pie-chart" width="960" height="450"></svg><a name="regional"></a>
     <p><br><br><br></p>
-    <h2 class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
+    <h2 onmouseover="responsiveVoice.speak('Educational Attainment: Region-level Breakdown of University Students');" onmouseleave="responsiveVoice.cancel();"  class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
 	
     <form id="tree-form">
         <div class="radio-toolbar">
@@ -45,7 +52,7 @@
     <div id="chart"></div>
 	<a name="state"></a>
     <p><br><br></p>
-    <h2 class="subtitle">Education Level of Population in Schooling: State-level Breakdown</h2>
+    <h2 responsiveVoice.speak('Education Level of Population in Schooling: State-level Breakdown');" onmouseleave="responsiveVoice.cancel(); class="subtitle">Education Level of Population in Schooling: State-level Breakdown</h2>
 	
     <form id="stack-form">
         <div class="radio-toolbar">
@@ -58,6 +65,7 @@
     <div>
         <svg id="stacked-bar-chart"></svg>
     </div>
+	
 
     
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -76,7 +84,6 @@
         }
     });
 });
-
 /* scrollTop() >= 240
    Should be equal the the height of the header
  */
