--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
       <li><a href="#national" onmouseover="soundclick.play();">National</a></li>
       <li><a href="#regional" onmouseover="soundclick.play();">Regional</a></li>
-      <li><a href="#state" onmouseover="test.play();">State-Level</a></li>
+      <li><a href="#state" onmouseover="soundclick.play();">State-Level</a></li>
 	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
     <ul>
         </nav>
