--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ soundclick.src = "sound.wav";
     <div id="chart"></div>
 	<a name="state"></a>
     <p><br><br></p>
-    <h2 responsiveVoice.speak('Education Level of Population in Schooling: State-level Breakdown');" onmouseleave="responsiveVoice.cancel();" class="subtitle">Education Level of Population in Schooling: State-level Breakdown</h2>
+    <h2 onmouseover="responsiveVoice.speak('Education Level of Population in Schooling: State-level Breakdown');" onmouseleave="responsiveVoice.cancel();" class="subtitle">Education Level of Population in Schooling: State-level Breakdown</h2>
 	
     <form id="stack-form">
         <div class="radio-toolbar">
