--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -15,12 +15,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-       <nav class="navbar fixed-top">
-    <ul class="nav navbar-nav ml-auto">
-      <li><a class="navbar-brand" href="#top" onmouseover="soundclick.play();"  >Top</a></li>
-      <li><a class="navbar-brand" href="#national" onmouseover="soundclick.play();">National</a></li>
-      <li><a class="navbar-brand" href="#regional" onmouseover="soundclick.play();">Regional</a></li>
-      <li><a class="navbar-brand" href="#state" onmouseover="soundclick.play();">State-Level</a></li>
+       <nav class="navbar navbar-default navbar-fixed-top"
+    <ul >
+      <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
+      <li><a href="#national" onmouseover="soundclick.play();">National</a></li>
+      <li><a href="#regional" onmouseover="soundclick.play();">Regional</a></li>
+      <li><a href="#state" onmouseover="soundclick.play();">State-Level</a></li>
 	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
     <ul>
         </nav>
