--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-       <nav class="navbar navbar-default navbar-fixed-top"
+       <nav class="navbar navbar-default navbar-fixed-top">
     <ul >
       <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
       <li><a href="#national" onmouseover="soundclick.play();">National</a></li>
