--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-       <nav class="navbar navbar-default navbar-fixed-top">
+       <nav class="navbar navbar-default navbar-static-top">
+	 <div class="container">
     <ul >
       <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
       <li><a href="#national" onmouseover="soundclick.play();">National</a></li>
@@ -23,6 +24,7 @@
       <li><a href="#state" onmouseover="soundclick.play();">State-Level</a></li>
 	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
     <ul>
+	    </div>
         </nav>
     </header>
 <body>
