--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-       <nav class="navbar navbar-default navbar-static-top">
-	 <div class="container">
+	  <div class="container-fluid">
+       <nav >
+	 
     <ul class="navbar-nav mr-auto" >
-      <li><a class="nav-link" href="#top" onmouseover="soundclick.play();"  >Top</a></li>
-      <li><a class="nav-link"href="#national" onmouseover="soundclick.play();">National</a></li>
-      <li><a class="nav-link" href="#regional" onmouseover="soundclick.play();">Regional</a></li>
-      <li><a class="nav-link" href="#state" onmouseover="soundclick.play();">State-Level</a></li>
+      <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
+      <li><a href="#national" onmouseover="soundclick.play();">National</a></li>
+      <li><a  href="#regional" onmouseover="soundclick.play();">Regional</a></li>
+      <li><a href="#state" onmouseover="soundclick.play();">State-Level</a></li>
 	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
     <ul>
-	    </div>
+	   
         </nav>
+	     </div>
     </header>
 <body>
 	
