--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-	  <div class="container-fluid">
-       <nav >
+	  
+       <nav class="heading">
 	 
     <ul >
       <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
@@ -27,7 +27,7 @@
     <ul>
 	   
         </nav>
-	     </div>
+	    
     </header>
 <body>
 	
