--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
   <header>
 	  
-       <nav class="heading">
+       <nav >
 	 
     <ul >
       <li><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
