--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-	  
+	<nav>  
        <ul >
       <li ><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
       <li ><a href="#national" onmouseover="soundclick.play();">National</a></li>
