--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				
 				
 				<div class="navbar-collapse collapse">
-	 
+	 <nav>
        <ul class="nav navbar-nav">
       <li ><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
       <li ><a href="#national" onmouseover="soundclick.play();">National</a></li>
@@ -41,6 +41,7 @@
       <li ><a href="#state" onmouseover="soundclick.play();">State-Level</a></li>
 	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
     <ul>
+	    </nav>
 	    </div>
 	       </div>		
    
