--- a/index.html
+++ b/index.html
@@ -98,7 +98,20 @@ soundclick.src = "sound.wav";
 <script src="assets/scripts/script_2.js"></script>
 <script src="assets/scripts/script_3.js"></script>
 <script>
- 
+     $( document ).ready(function() {
+      $(window).scroll(function(){
+        if ($(window).scrollTop() >= 300) {
+           $('nav').addClass('fixed-header');
+        }
+        else {
+           $('nav').removeClass('fixed-header');
+        }
+    });
+});
+
+/* scrollTop() >= 240
+   Should be equal the the height of the header
+ */
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
