--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-	
+	<div class="panel-collapse">
 	 <nav>
        <ul >
       <li ><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
@@ -22,7 +22,7 @@
     <ul>
 	    </nav>
 		
-	    
+	    </div>
     </header>
 <body>
 
