--- a/index.html
+++ b/index.html
@@ -11,24 +11,22 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-	  
-	  <button class="btn btn-link" type="button" data-toggle="collapse" data-target=".collapse" aria-expanded="true" aria-controls="collapseOne">
-	<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-		  </button>
-		<span class="navbar-brand">Responsive Demo</span>
-	 <nav>
-		
-       <ul >
+	  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <ul class="navbar-nav mr-auto" >
       <li ><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
       <li ><a href="#national" onmouseover="soundclick.play();">National</a></li>
       <li ><a  href="#regional" onmouseover="soundclick.play();">Regional</a></li>
       <li ><a href="#state" onmouseover="soundclick.play();">State-Level</a></li>
 	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
-    <ul>
-	    
+    </ul>
+	    </div>
 	    </nav>
 		
 	    
@@ -99,21 +97,9 @@ soundclick.src = "sound.wav";
         }
     });
 });
-	
-$(document).ready(function(){
-  if ($(window).width() <= 480){  
-    $('.collapse').removeClass('toggle');
-  }
-});
 
-$(window).resize(function(){
-  if ($(window).width() >= 480){  
-    $('.collapse').addClass('toggle');
-  }
-  if ($(window).width() <= 480){  
-    $('.collapse').removeClass('toggle');
-  }
-});	
+	
+	 
 
 /* scrollTop() >= 240
    Should be equal the the height of the header
