--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 	  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
+		
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+		
+		
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-       <ul class="navbar-nav mr-auto" >
+       <ul class="navbar-nav mr-auto mt-2 mt-lg-0" >
       <li ><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
       <li ><a href="#national" onmouseover="soundclick.play();">National</a></li>
       <li ><a  href="#regional" onmouseover="soundclick.play();">Regional</a></li>
