--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   <header>
 	  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	
 		
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-		
+	<a class="navbar-brand" href="#">Navbar</a>	
 		
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
        <ul class="navbar-nav mr-auto mt-2 mt-lg-0" >
-      <li ><a href="#top" onmouseover="soundclick.play();"  >Top</a></li>
-      <li ><a href="#national" onmouseover="soundclick.play();">National</a></li>
-      <li ><a  href="#regional" onmouseover="soundclick.play();">Regional</a></li>
-      <li ><a href="#state" onmouseover="soundclick.play();">State-Level</a></li>
+      <li class="nav-item"><a class="nav-link" href="#top" onmouseover="soundclick.play();"  >Top</a></li>
+      <li class="nav-item"><a class="nav-link" href="#national" onmouseover="soundclick.play();">National</a></li>
+      <li class="nav-item"><a class="nav-link" href="#regional" onmouseover="soundclick.play();">Regional</a></li>
+      <li class="nav-item"><a class="nav-link" href="#state" onmouseover="soundclick.play();">State-Level</a></li>
 	    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>	
     </ul>
 	    </div>
