--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
-	  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  
-	
-		
+	  <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="background-color: #212529;">
+  <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-	<a class="navbar-brand" href="#">Navbar</a>	
+		
 		
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
        <ul class="navbar-nav mr-auto mt-2 mt-lg-0" >
