--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
 <body>
 
    
-
+<nav class="footer">
+        <div class="center-xy footer-text">
 	
+		
+		
+		
 
     <h1 onmouseover="responsiveVoice.speak('Educational Attainment in the United States');" onmouseleave="responsiveVoice.cancel();" class="title" >Educational Attainment in the United States</h1>
         
@@ -80,6 +84,15 @@ soundclick.src = "sound.wav";
     <div>
         <svg id="stacked-bar-chart"></svg>
     </div>
+		
+		
+		</div>
+</nav>
+		
+		
+		
+		
+		
 	
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
