--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
 <body>
 
    
-<nav class="footer">
-        <div class="center-xy footer-text">
+<style>
+.content {
+    max-width: 500px;
+    margin: auto;
+}
+</style>
+<body>
+
+<div class="content">
+ 
+
+
 	
 		
 		
@@ -85,12 +95,10 @@ soundclick.src = "sound.wav";
         <svg id="stacked-bar-chart"></svg>
     </div>
 		
-		
-		</div>
-</nav>
+	
 		
 		
-		
+	</div>	
 		
 		
 	
