--- a/index.html
+++ b/index.html
@@ -34,15 +34,12 @@
 <body>
 
    
-<style>
-.content {
-    max-width: 500px;
-    margin: auto;
-}
-</style>
-<body>
-
-<div class="content">
+<script>
+	$(window).height();   // returns height of browser viewport
+$(document).height(); // returns height of HTML document (same as pageHeight in screenshot)
+$(window).width();   // returns width of browser viewport
+$(document).width();
+	</script>
  
 
 
@@ -61,7 +58,7 @@ var soundclick = new Audio();
 soundclick.src = "sound.wav";
 </script>  
 
-    <svg id="pie-chart" width="960" height="450"></svg><a name="regional"></a>
+    <svg id="pie-chart" width="screen.width;" height="screen.height;"></svg><a name="regional"></a>
     <p><br><br><br></p>
     <h2 onmouseover="responsiveVoice.speak('Educational Attainment: Region-level Breakdown of University Students');" onmouseleave="responsiveVoice.cancel();"  class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
 	
@@ -92,13 +89,13 @@ soundclick.src = "sound.wav";
     </div>
     </form>
     <div>
-        <svg id="stacked-bar-chart"></svg>
+        <svg id="stacked-bar-chart" width="screen.width;" height="screen.height;"></svg>
     </div>
 		
 	
 		
 		
-	</div>	
+	
 		
 		
 	
