--- a/index.html
+++ b/index.html
@@ -35,11 +35,19 @@
 
    
 <script>
-	$(window).height();   // returns height of browser viewport
-$(document).height(); // returns height of HTML document (same as pageHeight in screenshot)
-$(window).width();   // returns width of browser viewport
-$(document).width();
+	$(window).resize(function(){
+   var width= $(this).width() - $("#header").width() + $("#footer").width()
+   $('#content').width(width);
+})
+
+	
+	$(document).ready(function(){
+    $("#pie-chart").resize();
+});
 	</script>
+	
+
+
  
 
 
@@ -58,7 +66,7 @@ var soundclick = new Audio();
 soundclick.src = "sound.wav";
 </script>  
 
-    <svg id="pie-chart" width="screen.width;" height="screen.height;"></svg><a name="regional"></a>
+    <svg id="pie-chart" ></svg><a name="regional"></a>
     <p><br><br><br></p>
     <h2 onmouseover="responsiveVoice.speak('Educational Attainment: Region-level Breakdown of University Students');" onmouseleave="responsiveVoice.cancel();"  class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
 	
