--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 var soundclick = new Audio();
 soundclick.src = "sound.wav";
 </script>  
-
+<div>
     <svg id="pie-chart" width="screen.width;" height="screen.height; ></svg><a name="regional"></a>
+											      </div>										      
     <p><br><br><br></p>
     <h2 onmouseover="responsiveVoice.speak('Educational Attainment: Region-level Breakdown of University Students');" onmouseleave="responsiveVoice.cancel();"  class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
 	
