--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 var soundclick = new Audio();
 soundclick.src = "sound.wav";
 </script>  
-<div>
+<div style="width: screen.width;">
     <svg id="pie-chart" width="screen.width;" height="screen.height; ></svg><a name="regional"></a>
 											      </div>										      
     <p><br><br><br></p>
