--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
     </header>
 <body>
 
-   
+   <style>
+	   .test {
+   width: 100%;
+} 
 	
-
+	</style>
 
  
 
@@ -54,9 +57,10 @@
 var soundclick = new Audio();
 soundclick.src = "sound.wav";
 </script>  
-<div style="width: screen.width;">
+<div class="container">
+	<div class="test">
     <svg id="pie-chart" width="screen.width;" height="screen.height; ></svg><a name="regional"></a>
-											      </div>										      
+											      </div></div>									      
     <p><br><br><br></p>
     <h2 onmouseover="responsiveVoice.speak('Educational Attainment: Region-level Breakdown of University Students');" onmouseleave="responsiveVoice.cancel();"  class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
 	
