--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ var soundclick = new Audio();
 soundclick.src = "sound.wav";
 </script>  
 
-    <svg id="pie-chart" width="screen.width;" height="screen.height; ></svg><a name="regional"></a>
+    <svg id="pie-chart" width="screen.width;" height="screen.height; viewBox="0 0 300 300"></svg><a name="regional"></a>
 											     									      
     <p><br><br><br></p>
     <h2 onmouseover="responsiveVoice.speak('Educational Attainment: Region-level Breakdown of University Students');" onmouseleave="responsiveVoice.cancel();"  class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
