--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
   <header>
+	  <div class="pos-f-t">
+		  <div class="collapse" id="navbarToggleExternalContent">
+			  
 	  <nav class="navbar navbar-expand-lg navbar-dark bg-dark"  style="background-color: red">
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+		  </div></div>
 		
 		
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
