--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ var soundclick = new Audio();
 soundclick.src = "sound.wav";
 </script>  
 
-    <svg id="pie-chart" width=160" height="40" ></svg><a name="regional"></a>
+    <svg id="pie-chart" width="400" height="400" ></svg><a name="regional"></a>
 											      											     									      
     <p><br><br><br></p>
     <h2 onmouseover="responsiveVoice.speak('Educational Attainment: Region-level Breakdown of University Students');" onmouseleave="responsiveVoice.cancel();"  class="subtitle">Educational Attainment: Region-level Breakdown of University Students</h2>
