--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@ soundclick.src = "sound.wav";
     });
 });
 
+$( document ).ready(function() {
+     if ($window).width() >=300) {
+     .alert($("div").width(1300));
+     
+     }
+
 	
 	 
 
