--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ soundclick.src = "sound.wav";
 });
 
 $( document ).ready(function() {
-     if ($window).width() >=300) {
-     .alert($("div").width(1300));
+     if ($window).width() <=300) {
+     $('nav').width(1300)
      
      }
 
