--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@ soundclick.src = "sound.wav";
 $( document ).ready(function() {
      if ($window).width() <=300) {
      $('nav').width(1300)
-     
+     else{
+     $('nav').width(1300)
+     }
      }
 
 	
