--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ soundclick.src = "sound.wav";
 });
 
 $( document ).ready(function() {
-     if ($window).width() <=300) {
+     if ($(window).width() <=300) {
      $('nav').width(1300)
      else{
      $('nav').width(1300)
