--- a/index.html
+++ b/index.html
@@ -121,12 +121,15 @@ soundclick.src = "sound.wav";
 });
 
 $( document ).ready(function() {
+	$(window).width(function(){
      if ($(window).width() <=300) {
      $('nav').width(1300)
      else{
      $('nav').width(1300)
      }
      }
+	}};
+			}};
 
 	
 	 
