--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ soundclick.src = "sound.wav";
     });
 });
 
-$( document ).ready(function() {
+$( window ).on( "load", function(){
 	$(window).width(function(){
      if ($(window).width() <=300) {
      $('nav').width(1300)
