--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <li class="nav-item active"><a class="nav-link" href="#national" onmouseover="soundclick.play();" onclick="FirstChart()">National</a></li>
       <li class="nav-item active"><a class="nav-link" href="#regional" onmouseover="soundclick.play();" onclick="SecondChart()">Regional</a></li>
       <li class="nav-item active"><a class="nav-link" href="#state" onmouseover="soundclick.play();" onclick="ThirdChart()">State-Level</a></li>
-      <li class="nav-item active"><a class="nav-link" href="/finito/new" onmouseover="soundclick.play();" >3 new charts</a></li>	   
+      <li class="nav-item active"><a class="nav-link" href="/new" onmouseover="soundclick.play();" >3 new charts</a></li>	   
 
     </ul>
 	    </div>
