--- a/new/index.html
+++ b/new/index.html
@@ -26,7 +26,7 @@
   <body>
   <div id='layout'>
 <div id='container'>
-<h1>3 nea grafimata</h1>
+<h1>3 Νεα παραδείγματα</h1>
 <br/><br/><br/>
 <h2>Internet use by individuals</h2>
 <h3><a href="https://ec.europa.eu/eurostat/web/products-datasets/-/tin00028">source</a></h3>
@@ -57,7 +57,8 @@
   <div id='layout'>
 <div id='container'>
 <br/><br/>
-<h2>Posostiaia (%) katanomi tis sinolikis katanalosis energeias kata teliki xrisi</h2>
+<h2>Ποσοστιαία (%) κατανοµή της συνολικής κατανάλωσης ενέργειας κατά
+τελική χρήση </h2>
 <h3><a href="https://www.statistics.gr/el/statistics?p_p_id=documents_WAR_publicationsportlet_INSTANCE_qDQ8fBKKo4lN&p_p_lifecycle=2&p_p_state=normal&p_p_mode=view&p_p_cacheability=cacheLevelPage&p_p_col_id=column-2&p_p_col_count=4&p_p_col_pos=1&_documents_WAR_publicationsportlet_INSTANCE_qDQ8fBKKo4lN_javax.faces.resource=document&_documents_WAR_publicationsportlet_INSTANCE_qDQ8fBKKo4lN_ln=downloadResources&_documents_WAR_publicationsportlet_INSTANCE_qDQ8fBKKo4lN_documentID=105418&_documents_WAR_publicationsportlet_INSTANCE_qDQ8fBKKo4lN_locale=el">source</a></h3>
       <div id="chart"><br/><br/></div></div></div>
 
