--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 		
 		
       <li class="nav-item active"><a class="nav-link" href="#top" onmouseover="soundclick.play();"  >Top</a></li>
-      <li class="nav-item active"><a class="nav-link" href="#national" onmouseover="soundclick.play();" onclick="FirstChart()">National</a></li>
-      <li class="nav-item active"><a class="nav-link" href="#regional" onmouseover="soundclick.play();" onclick="SecondChart()">Regional</a></li>
-      <li class="nav-item active"><a class="nav-link" href="#state" onmouseover="soundclick.play();" onclick="ThirdChart()">State-Level</a></li>
-      <li class="nav-item active"><a class="nav-link" href="new" onmouseover="soundclick.play();" >3 new charts</a></li>	   
+      <li class="nav-item active"><a class="nav-link" href="#national" onmouseover="soundclick.play();" >National</a></li>
+      <li class="nav-item active"><a class="nav-link" href="#regional" onmouseover="soundclick.play();" >Regional</a></li>
+      <li class="nav-item active"><a class="nav-link" href="#state" onmouseover="soundclick.play();" >State-Level</a></li>   
 
     </ul>
 	    </div>
